Refactor for genericity of operations
Introduced Transformer of translation units
Even though we only have one to begin with